--- a/templates/authenticate/signin.html
+++ b/templates/authenticate/signin.html
@@ -30,5 +30,6 @@
         
         <button type="submit">Login</button>
     </form>
+    <p>Don't have an account? <a href="/signup">Signup</a></p>
 </body>
 </html>
