--- a/templates/authenticate/signup.html
+++ b/templates/authenticate/signup.html
@@ -37,9 +37,10 @@
           <form class="searchbar" action="#">
             <input
               class="place"
-              type="text"
+              type="search"
               placeholder="what are you shopping for?"
               name="search"
+              id="search"
             />
             <button type="submit">search<i class="fa fa-search"></i></button>
           </form>
