--- a/templates/authenticate/signup.html
+++ b/templates/authenticate/signup.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <title>Sign-up</title>
     <link
       rel="stylesheet"
@@ -34,7 +33,7 @@
           <div class="signup"><a href="#Sign In">Sign Up</a></div>
         </div>
         <div class="headersearch">
-          <form class="searchbar" action="#">
+          <form class="searchbar" action="/products/search" method="post">
             <input
               class="place"
               type="search"
