--- a/templates/authenticate/index.html
+++ b/templates/authenticate/index.html
@@ -62,7 +62,7 @@
                 <div class="shopsmart">
                    <div class="txt">
                        <h1>SHOP SMART</h1>
-                       <!-- <p style="font-family: 'Poppins'; margin-left: -1100px; font-style: normal; font-weight: 600; font-size: 40px; line-height: 56px; text-align: center; color: #222424;">Shop right at the<br> right price</p>
+                       <p style="font-family: 'Poppins'; margin-left: -1100px; font-style: normal; font-weight: 600; font-size: 40px; line-height: 56px; text-align: center; color: #222424;">Shop right at the<br> right price</p>
                        <div class="right-column1">
                         <a class="button1" href="#" style="font-family: 'Poppins';
                         font-style: normal;
@@ -81,7 +81,7 @@
                        <img class="apple12" alt="Apple Iphone 12" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\image 5.png">
                        <h2 style="font-family: 'Poppins'; margin-left: 950px; margin-top: -200px; margin-bottom: 200px; font-style: normal; font-weight: 800; font-size: 48px; line-height: 102px; color: #222424;">Apple iPhone 12</h2>
                        <p style="font-family: 'Poppins'; font-style: normal; margin-left: 700px; margin-top: -200px; margin-bottom: 200px; font-weight: 600; font-size: 40px; line-height: 56px; text-align: center; color: #222424">Say hello to 5G</p>
-                   </div> -->
+                   </div>
                 
                 <h1 style="font-family: 'Poppins';
                 font-style: normal;
@@ -109,12 +109,13 @@
                    <h4 class="price">₦181,000</h4>
                 </div>
        
-                <!-- <div class="tecno">
+                <div class="tecno">
                    <img class="tecnoc" alt="Tecno Camon" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\image 12.png">
                    <img class="like" alt="likebutton" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\Group 39725.png">
                    <p class="gad">Tecno Camon 17p - Cg7<br>-Silver 6.8” ...</p>
                    <h4 class="price">₦112,000</h4>
-                </div> -->
+                </div> 
+
                 <h4 class="see1" style="margin-left: 740px; margin-top: -150px; margin-bottom: 100px;">see more</h4>
        
                 <h1 style="font-family: 'Poppins';
@@ -132,7 +133,7 @@
                 <div class="macbook">
                    <img class="mac" alt="Apple Macbook" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\macbook pro 13 2.png">
                    <img class="like" alt="likebutton" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\Group 39725.png">
-                   <p class="gad">Apple Macbook Pro 13.3” <br>(2020 ...</p>
+                   <p class="gad">Apple Macbook Pro 13.3” <br>2020 ...</p>
                    <h4 class="price">₦2,900,000</h4>
                 </div>
        
@@ -143,12 +144,13 @@
                    <h4 class="price">₦370,000</h4>
                 </div>
        
-                <!-- <div class="hp">
+                <div class="hp">
                    <img class="hplaptop" alt="HP Spectre" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\image 44.png">
                    <img class="like" alt="likebutton" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\Group 39725.png">
                    <p class="gad1">Hp SPECTRE 15 X360 11TH GEN CORE I7,1TB <br>SSD,16GB RAM,4K <br>DISPLAY,TOUCH,BACKLIT,WIN 10 PRO <br>SPECTRE 15T 11TH GEN</p>
                    <h4 class="price">₦840,000</h4>
-                </div> -->
+                </div>
+
                 <h4 class="see2" style="margin-left: 740px; margin-top: -150px; margin-bottom: 100px;">see more</h4>
 
 
@@ -178,16 +180,17 @@
                    <h4 class="price">₦670,000</h4>
                 </div>
        
-                <!-- <div class="iphonexs">
+                <div class="iphonexs">
                    <img class="iphxs" alt="iPhone XS Max" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\image 17.png">
                    <img class="like" alt="likebutton" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\Group 39725.png">
                    <p class="gad">Apple IPhone Xs Max - 6.5” - <br>512 ...</p>
                    <h4 class="price">₦380,000</h4>
-                </div> -->
+                </div>
+
                 <h4 class="see3" style="margin-left: 740px; margin-top: -150px; margin-bottom: 100px;">see more</h4>
                 
 
-                <!-- <h1 style="font-family: 'Poppins';
+                <h1 style="font-family: 'Poppins';
                 font-style: normal;
                 font-weight: 700;
                 font-size: 50.7226px;
@@ -200,21 +203,28 @@
                 color: #222424">TOP BRANDS</h1>
 
 <div class="brands">
-    <div class="applebg">
-    <img class="appbg" alt="appleicon" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\apple-removebg-preview 2.png">
-    </div>
-    <div class="nokiabg">
-        <img class="nokbg" alt="nokiaicon" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\nokia-removebg-preview 1.png">
+    <div class= "brands-text1">
+        <h2 class = "brands-text">Shop from your trusted and favourite Brands</h2>
+    </div>   
+    <div class = "brands-images1"> 
+       <div class="applebg">
+         <img class="appbg" alt="appleicon" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\apple-removebg-preview 2.png">
+       </div>
+       <div class="nokiabg">
+          <img class="nokbg" alt="nokiaicon" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\nokia-removebg-preview 1.png">
         </div>
         <div class="samsungbg">
             <img class="sambg" alt="samsungicon" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\samsung-removebg-preview 1.png">
-            </div>
-            <div class="infinixbg">
-                <img class="infinixbg" alt="infinixicon" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\infinix-removebg-preview 1.png">
-                </div>
-                <div class="tecnobg">
-                    <img class="tecbg" alt="tecnoicon" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\tecno-removebg-preview 1.png">
-                    </div>
+        </div>
+    </div>
+    <div class = "brands-images2">
+        <div class="infinixbg">
+            <img class="infinixbg" alt="infinixicon" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\infinix-removebg-preview 1.png">
+        </div>
+        <div class="tecnobg">
+            <img class="tecbg" alt="tecnoicon" src="C:\Users\Home\desktop\zuri-project-frontend\landing page\icons\tecno-removebg-preview 1.png">
+        </div>   
+    </div>    
  </div>
        
                 
@@ -226,47 +236,63 @@
        
            </div>
        
-                <div class="update"><h3 style="font-family: 'Poppins'; font-style: normal; font-weight: 500; font-size: 32px; text-align: center; line-height: 40px;">Get update on Deals and Prices</h3>
-                   <p style="font-size: 16px; font-family: 'Poppins'; font-weight: 400; text-align: center;">Receive Updates and others you would actually be interested in. Unsubscribe any time
-                   </p>
+                <div class="update">
+                    <div class="text1">
+                    <h3 style="font-family: 'Poppins'; background-color: #FCEEC9; padding-top: 50px; font-style: normal; font-weight: 500; font-size: 32px; text-align: center; line-height: 40px;">Get update on Deals and Prices</h3>
+                   <p style="font-size: 16px; font-family: 'Poppins'; background-color: #FCEEC9; padding-top: 20px; font-weight: 400; text-align: center;">Receive Updates and others you would actually be interested in. Unsubscribe any time
+                   </p></div>
                    <form class="example" action="/action_page.php">
                      <input type="text" placeholder="Your email" name="search2">
                      <button type="submit">Subscribe</button>
                    </form>
-               </div>  -->
+               </div>
          <!--  #### CREATE FOOTER ####  -->
          <footer class="footer-col">
-            <div>
-                <b>Categories</b><br>
-                Mobiles <br>
-                Laptops<br>
-                Tablets <br> 
-                Accessories<br>
-                Appliances <br>
+            
+            <div class="cat">
+                <b>Categories</b>
+                <br/>
+                <br/>
+                Mobiles
+                <br/>
+                <br/>
+                Laptops
+                <br/>
+                <br/>
+                Tablets 
+                <br/> 
+                <br/>
+                Accessories
+                <br/>
+                <br/>
+                Appliances 
             </div>
-            <div>
-                <b>Brands</b><br>
-                Apple<br>
-                Samsung<br>
-                Tecno<br>
-                Infinix<br>
-                Nokia<br>
-                Hp<br>
-                Lenovo<br>
+            <br/>
+            <div class="cat">
+                <b>Brands</b><br/><br/>
+                Apple<br/><br/>
+                Samsung<br/><br/>
+                Tecno<br/><br/>
+                Infinix<br/><br/>
+                Nokia<br/><br/>
+                Hp<br/><br/>
+                Lenovo
             </div>
-            <div>
-                <b>Site</b><br>
-                About us<br>
-                Team<br>
-                Merchant sign up<br>
+            <br/>
+            <div class="cat">
+                <b>Site</b><br/><br/>
+                About us<br/><br/>
+                Team<br/><br/>
+                Merchant sign up<br/><br/>
                 User Guide
             </div>
-            <div>
-                <b>Support</b><br>
-                Contact Us<br>
-                Help Center<br>
-                Merchant Sign Up<br>
-                Reviews<br>
+            <br/>
+            <div class="cat">
+                <b>Support</b><br/><br/>
+                Contact Us<br/><br/>
+                Help Center<br/><br/>
+                Merchant Sign Up<br/><br/>
+                Reviews<br/><br/>
                 Privacy Policy
             </div>
             <div class="last-row">
@@ -438,10 +464,10 @@
         height: 159px;
         left: 279px;
         top: 0px;
-        
-
         background: #ffffff;
         border-radius: 50%;
+        margin-left: 50px;
+        margin-right: 50px;
         }
 
         .nokiabg {
@@ -450,6 +476,7 @@
         height: 159px;
         left: 279px;
         top: 0px;
+        margin-right: 50px;
         
 
         background: #ffffff;
@@ -462,6 +489,7 @@
         height: 159px;
         left: 279px;
         top: 0px;
+
         
 
         background: #ffffff;
@@ -472,8 +500,9 @@
         position: relative;
         width: 171px;
         height: 159px;
-        left: 279px;
+        left: 300px;
         top: 0px;
+        margin-right: 50px;
         
 
         background: #ffffff;
@@ -493,7 +522,7 @@
         position: relative;
         width: 171px;
         height: 159px;
-        left: 279px;
+        left: 310px;
         top: 0px;
         
 
@@ -625,7 +654,13 @@
             text-align: center;
             margin-bottom: 20px;
             border-bottom: 1px solid gray;
+            background-color: #E5EBF3;
         }
+
+        .cat {
+            background-color: #E5EBF3;
+           }
+
         #footer ul{
             display: block;
         }
@@ -666,6 +701,8 @@
         box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
         }
         
+        
+        
         .txt h1 {
         font-family: 'Poppins';
                             font-style: normal;
@@ -683,11 +720,19 @@
                             margin-top: 200px;
         }
         .update {
-            width: 1452px;
+            width: 1433px;
             height: 268px;
-            margin: auto;
-            background-color: #FFF4D6;
-            }
+            margin-right: 5px;
+            background-color: #FCEEC9;
+        }
+
+        .example {
+            background-color: #FCEEC9;
+            margin-top: 20px;
+        }
+
+            
+            
         
             
         form.example input[type=text] {
@@ -850,7 +895,7 @@
         .brands {
         background-color: #E5EBF3;
         display: flex;
-        flex-direction: column;
+        
         align-items: center;
         padding: 0px;
         gap: 17px;
@@ -860,6 +905,34 @@
         justify-content: center;
 
         }
+
+        .brands-text {
+            background-color: #E5EBF3;
+            float: left;
+        }
+
+        .brands-text1 {
+            background-color: #E5EBF3;
+            float: left;
+        }
+
+        .brands-images1{
+            display: flex;
+            padding: 0px;
+            margin: 0px !important;
+            background-color: #E5EBF3;
+        }
+
+        .brands-images2{
+            display: flex;
+            margin-top: 20px;
+            padding: 0px;
+            background-color: #E5EBF3;
+        }
+
+
+
+        
 
 
 
@@ -1000,9 +1073,11 @@
         flex-flow: row wrap;
         gap: 7rem;
         justify-content: center;
-        margin-top: 100px;
-        font-size: 12.5px;
-        background-color: #ffffff;
+        margin-top: auto;
+        font-size: 20px;
+        background-color: #E5EBF3;
+        width: 1433px;
+        height: 663.65px;
         }
 
         .last-row {
@@ -1011,8 +1086,17 @@
         text-align: center;
         padding-top: 20px;
         font-size: 12px;
-        background-color: #ffffff;
+        background-color: #E5EBF3;
         }
+
+        .cat {
+            background-color: #E5EBF3;
+            margin-top: 100px;
+          }
+          
+          .cat b {
+            background-color: #E5EBF3;
+          }
 
         /* Responsive layout WITH FLEX - when the screen is less than 700px wide, make the columns stack on top of each other instead of next to each other */
         @media screen and (max-width: 700px) {
